<?xml version="1.0"?>
<package format="2">
  <name>ros_drake</name>
  <version>0.1.1</version>
  <description>
    Provides a cmake config for the DRAKE toolbox http://drake.mit.edu/
  </description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/osrf/ros_drake/issues</url>
  <url type="repository">https://github.com/osrf/ros_drake</url>

  <author>Robot Locomotion Group at MIT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>drake</build_export_depend>
  <exec_depend>drake</exec_depend>

</package>
