<?xml version="1.0"?>
<package format="2">
  <name>ros_drake</name>
  <version>0.1.2</version>
  <description>
    Provides a CMake config for the Drake toolbox http://drake.mit.edu/
  </description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/RobotLocomotion/ros_drake/issues</url>
  <url type="repository">https://github.com/RobotLocomotion/ros_drake</url>

  <author>Robot Locomotion Group at MIT</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
